--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ ol {
 	padding-bottom: 120px;
 }
 .member-details {
-	padding: 32px 16px 32px;
+	padding: 32px 0px;
 }
 .value {
 	font-weight: 500;
@@ -305,11 +305,12 @@ ol {
 	padding-top: 96px;
 	padding-bottom: 120px;
 }
-.portfolio-1st-section {
+.portfolio-first-section {
 	display: flex;
 	flex-wrap: wrap;
 	column-gap: 24px;
 	row-gap: 48px;
+	padding: 96px 0 120px 0;
 }
 .btn-list {
 	flex-basis: calc((100% - 48px) / 3);
@@ -384,7 +385,6 @@ ol {
 	line-height: 1.17em;
 	letter-spacing: 0.54px;
 	text-transform: uppercase;
-	margin-bottom: 16px;
 }
 
 .footer-text {
@@ -405,5 +405,5 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding-bottom: 16px;
-	margin-bottom: 15px;
+	margin-bottom: 16px;
 }
