--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ ol {
 	padding-bottom: 120px;
 }
 .member-details {
-	padding: 32px 0px;
+	padding: 32px 0;
 }
 .value {
 	font-weight: 500;
@@ -306,10 +306,6 @@ ol {
 	padding-bottom: 120px;
 }
 .portfolio-first-section {
-	display: flex;
-	flex-wrap: wrap;
-	column-gap: 24px;
-	row-gap: 48px;
 	padding: 96px 0 120px 0;
 }
 .btn-list {
@@ -404,6 +400,9 @@ ol {
 	letter-spacing: 0.54px;
 	text-transform: uppercase;
 	display: inline-block;
-	padding-bottom: 16px;
+	margin-bottom: 16px;
+}
+
+.link .ftr-logo {
 	margin-bottom: 16px;
 }
