--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ ol {
 	margin: 0;
 	padding: 0;
 }
-.portfolio-2nd-list {
+.portfolio-point-list {
 	flex-basis: calc((100% - 48px) / 3);
 }
 .portfolio-link {
